# honest-ledger

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: deploy.yml
android/app/: build.gradle.kts
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  yoyo.ini
backend/app/: config.py  db.py  main.py
backend/app/ai/: dependencies.py  provider.py  router.py  schemas.py
backend/app/auth/: dependencies.py  repository.py  router.py  schemas.py  service.py
backend/app/borrowings/: repayments_repository.py  repository.py  router.py  schemas.py  service.py
backend/app/cards/: repository.py  router.py  schemas.py  service.py  statements_repository.py
backend/app/catalog/: repository.py  router.py  schemas.py  service.py
backend/app/core/: config.py  db.py  dependencies.py  errors.py  logging.py  middleware.py  rate_limit.py  security.py
backend/app/lenders/: repository.py  router.py  schemas.py  service.py
backend/app/recurring/: repository.py  router.py  schemas.py  service.py
backend/app/settings/: repository.py  router.py  schemas.py  service.py
backend/app/summary/: repository.py  router.py
backend/app/sync/: repository.py  router.py
backend/migrations/: 0001_bootstrap.rollback.sql  0001_bootstrap.sql  0002_auth.rollback.sql  0002_auth.sql  0003_borrowings.rollback.sql  0003_borrowings.sql  0004_entities.rollback.sql  0004_entities.sql  0005_catalog_settings.rollback.sql  0005_catalog_settings.sql  0006_borrowing_lender_text.rollback.sql  0006_borrowing_lender_text.sql  0007_no_cost_emi_flags.rollback.sql  0007_no_cost_emi_flags.sql  0008_lender_fee_min.rollback.sql  0008_lender_fee_min.sql  0009_day_count_and_foreclosure.rollback.sql  0009_day_count_and_foreclosure.sql  0010_catalog_emi_terms.rollback.sql  0010_catalog_emi_terms.sql  0011_card_links_and_nickname.rollback.sql  0011_card_links_and_nickname.sql
backend/tests/: conftest.py  factories.py  test_ai_api.py  test_app_setup.py  test_auth_repository.py  test_borrowings_api.py  test_borrowings_repository.py  test_card_statements_api.py  test_cards_api.py  test_catalog_api.py  test_change_password.py  test_changes_feed.py  test_day_count_and_foreclosure_api.py  test_delete_account.py  test_lenders_api.py  test_login.py  test_me.py  test_middleware.py  test_rate_limit.py  test_recurring_api.py  test_refresh_logout.py  test_register.py  test_repayments_api.py  test_security.py  test_settings_api.py  test_summary.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart
macos/Runner/: DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
scripts/: backup.sh  deploy.sh  ship.sh
test/: app_smoke_test.dart  flutter_test_config.dart
test/core/: amount_input_formatter_test.dart  date_x_test.dart  finance_math_day_count_test.dart  finance_math_no_cost_test.dart  finance_math_test.dart
test/shared/: app_button_test.dart  (+2 more)
web/: index.html  manifest.json
(+218 files in other folders)
