[project]
name = "recurring-backend"
version = "0.0.0"
description = "FastAPI + Postgres backend for the recurring finance app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "yoyo-migrations>=9.0",
    "psycopg2-binary>=2.9",  # yoyo's postgres backend driver (sync, migrations only)
]

[dependency-groups]
dev = [
    "httpx>=0.27",   # test client for the API
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false
