[project]
name = "recurring-backend"
version = "0.0.0"
description = "FastAPI + Postgres backend for the recurring finance app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "yoyo-migrations>=9.0",
    "psycopg2-binary>=2.9",  # yoyo's postgres backend driver (sync, migrations only)
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.13.0",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27",   # test client for the API
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
# One event loop for the whole run: asyncpg connections are bound to the loop
# they were created on, so fixtures (the pool) and tests must share it.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
